@@ -6,6 +6,8 @@ software-center (2.1.10) UNRELEASED; urgency=low
   * softwarecenter/app.py:
     - switch to available view when we are in the installed view and we get a
       request for a pkg in the available view
+    - allow s-c to be passed a search term (LP: #612507)
+      The syntax is "software-center search:search term"
   * softwarecenter/view/appdetailsview_gtk.py,
     softwarecenter/view/appdetailsview_webkit.py:
     - use the same gwibber text in both appdetails views (LP: #614220)
